--- a/.github/workflows/call-ost-trigger.yaml
+++ b/.github/workflows/call-ost-trigger.yaml
@@ -12,6 +12,7 @@ jobs:
     with:
       url: ${{ github.event.workflow_run.artifacts_url }}
   log:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v5
         with:
