--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -6,7 +6,8 @@ on:
 
 jobs:
   call-ost-trigger:
-    if: ${{ github.event.issue.pull_request && github.event.review.state == 'approved' && github.event.comment.body == '/ost'}}
+# if: ${{ github.event.issue.pull_request && github.event.review.state == 'approved' && github.event.comment.body == '/ost'}}
+    if: ${{ github.event.issue.pull_request && github.event.comment.body == '/ost'}}
     uses: oVirt/test-ost/.github/workflows/ost-trigger.yaml@main
     with:
       url: ${{ github.event.workflow_run.artifacts_url }}
