--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -16,6 +16,7 @@ jobs:
 
   triggered:
     needs: call-ost-trigger
+    if: ${{ always() }} 
     runs-on: ubuntu-latest
     permissions:
       issues: write
