--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -25,12 +25,12 @@ jobs:
         run: |
           cd /var/lib/nginx/gh
           set -x
-          [[ -z "$SHA" ]] && { SHA=$(curl ${PR_URL} | jq .head.sha); CHECK_SUITES="$(curl ${PR_URL} | jq .head.repo.url)/commits/${SHA}/check-suites"; }
-          curl ${CHECK_SUITES} | jq ".check_suites[] | select(.app.id==164117) | select(.head_commit.id==\"${SHA}\") | .updated_at"
+          [[ -z "$SHA" ]] && { SHA=$(curl ${PR_URL} | jq -r .head.sha); CHECK_SUITES="$(curl ${PR_URL} | jq -r .head.repo.url)/commits/${SHA}/check-suites"; }
+          curl ${CHECK_SUITES} | jq -r ".check_suites[] | select(.app.id==164117) | select(.head_commit.id==\"${SHA}\") | .updated_at"
           echo ${{inputs.pr_url }}${{ github.event.issue.pull_request.url }} | runuser -u nginx tee queue
           i=0
           while [ $i -lt 12 ]; do
             sleep 10
-            curl ${CHECK_SUITES} | jq ".check_suites[] | select(.app.id==164117) | select(.head_commit.id==\"${SHA}\") | .updated_at"
+            curl ${CHECK_SUITES} | jq -r ".check_suites[] | select(.app.id==164117) | select(.head_commit.id==\"${SHA}\") | .updated_at"
             ((i++))
           done 
