--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -20,17 +20,17 @@ jobs:
       - name: trigger
         env:
           SHA: "${{ github.event.issue.pull_request.head.sha }}"
-          CHECK_SUITES: "${{ github.event.issue.pull_request.head.repo.url }}/commits/${{ github.event.issue.pull_request.head.sha }}/check-suites"
+          CHECK_SUITES: "${{ github.event.issue.pull_request.base.repo.url }}/commits/${{ github.event.issue.pull_request.head.sha }}/check-suites"
           PR_URL: "${{ github.event.issue.pull_request.url }}${{ github.event.inputs.pr_url }}"
         run: |
           cd /var/lib/nginx/gh
           set -x
-          [[ -z "$SHA" ]] && { SHA=$(curl ${PR_URL} | jq -r .head.sha); CHECK_SUITES="$(curl ${PR_URL} | jq -r .head.repo.url)/commits/${SHA}/check-suites"; }
+          [[ -z "$SHA" ]] && { SHA=$(curl ${PR_URL} | jq -r .head.sha); CHECK_SUITES="$(curl ${PR_URL} | jq -r .base.repo.url)/commits/${SHA}/check-suites"; }
           curl ${CHECK_SUITES} | jq -r ".check_suites[] | select(.app.id==164117) | select(.head_commit.id==\"${SHA}\") | .updated_at"
           echo ${{inputs.pr_url }}${{ github.event.issue.pull_request.url }} | runuser -u nginx tee queue
           i=0
           while [ $i -lt 12 ]; do
             sleep 10
-            curl ${CHECK_SUITES} | jq -r ".check_suites[] | select(.app.id==164117) | select(.head_commit.id==\"${SHA}\") | .updated_at"
+            curl ${CHECK_SUITES} | jq  ".check_suites[] | select(.app.id==164117) | select(.head_commit.id==\"${SHA}\") | .updated_at"
             ((i++))
           done 
