--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -15,7 +15,7 @@ jobs:
 # if: ${{ github.event.issue.pull_request && github.event.review.state == 'approved' && github.event.comment.body == '/ost'}}
     if: ${{ (github.event.issue.pull_request && github.event.comment.body == '/ost') || github.event.inputs.pr_url }}
     runs-on: self-hosted
-    timeout-minutes: 2
+    timeout-minutes: 4
     steps:
       - name: trigger
         env:
@@ -24,12 +24,15 @@ jobs:
           PR_URL: "${{ github.event.issue.pull_request.url }}${{ github.event.inputs.pr_url }}"
         run: |
           cd /var/lib/nginx/gh
-          [[ -z "$SHA" ]] && { SHA=$(curl ${PR_URL} | jq -r .head.sha); CHECK_SUITES="$(curl ${PR_URL} | jq -r .base.repo.url)/commits/${SHA}/check-suites"; }
-          curl ${CHECK_SUITES} | jq -r ".check_suites[] | select(.app.id==164117) | select(.head_commit.id==\"${SHA}\") | .updated_at"
+          [[ -z "$SHA" ]] && { SHA=$(curl -sS ${PR_URL} | jq -r .head.sha); CHECK_SUITES="$(curl -sS ${PR_URL} | jq -r .base.repo.url)/commits/${SHA}/check-suites"; }
+          BASE_TIME=$(curl -sS ${CHECK_SUITES} | jq -r ".check_suites[] | select(.app.id==164117) | select(.head_commit.id==\"${SHA}\") | .updated_at")
           echo ${{inputs.pr_url }}${{ github.event.issue.pull_request.url }} | runuser -u nginx tee queue
           i=0
           while [ $i -lt 12 ]; do
             sleep 10
-            echo "try $((i++))"
-            curl ${CHECK_SUITES} | jq ".check_suites[] | select(.app.id==164117) | select(.head_commit.id==\"${SHA}\") | .updated_at"
-          done 
+            UPDATE_TIME=$(curl -sS ${CHECK_SUITES} | jq ".check_suites[] | select(.app.id==164117) | select(.head_commit.id==\"${SHA}\") | .updated_at")
+            echo -n "try $((i++)): $UPDATE_TIME"
+            [[ "$BASE_TIME" != "$UPDATE_TIME" ]] && break
+          done
+          rm -f queue
+          [[ "$BASE_TIME" != "$UPDATE_TIME" ]]
