--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -24,7 +24,6 @@ jobs:
           PR_URL: "${{ github.event.issue.pull_request.url }}${{ github.event.inputs.pr_url }}"
         run: |
           cd /var/lib/nginx/gh
-          set -x
           [[ -z "$SHA" ]] && { SHA=$(curl -sS ${PR_URL} | jq -r .head.sha); CHECK_SUITES="$(curl -sS ${PR_URL} | jq -r .base.repo.url)/commits/${SHA}/check-suites"; }
           BASE_TIME=$(curl -sS ${CHECK_SUITES} | jq -r ".check_suites[] | select(.app.id==164117) | select(.head_commit.id==\"${SHA}\") | .updated_at")
           [[ -z "$BASE_TIME" ]] && { echo error getting suites; exit 1; }
@@ -32,7 +31,7 @@ jobs:
           i=0
           while [ $i -lt 12 ]; do
             sleep 10
-            UPDATE_TIME=$(curl -sS ${CHECK_SUITES} | jq ".check_suites[] | select(.app.id==164117) | select(.head_commit.id==\"${SHA}\") | .updated_at")
+            UPDATE_TIME=$(curl -sS ${CHECK_SUITES} | jq -r ".check_suites[] | select(.app.id==164117) | select(.head_commit.id==\"${SHA}\") | .updated_at")
             [[ -z "$UPDATE_TIME" ]] && { echo error getting update; UPDATE_TIME=$BASE_TIME; }
             echo -n "try $((i++)): $UPDATE_TIME"
             [[ "$BASE_TIME" != "$UPDATE_TIME" ]] && break
